--- a/js/d3.md
+++ b/js/d3.md
@@ -1,5 +1,5 @@
 ##D3
-* 
+* DOM selector
 ```
 d3.select("body")
     .style("color", "black")
@@ -7,12 +7,29 @@ d3.select("body")
     .attr('name','value')
 
 
+//select all links inside tag that has id of id
+d3.select("#id")
+    .select(a)
+    .style("color", "black")
+
 d3.selectAll("section")
     .attr("class", "special")
   .append("div")
     .html("Hello, world!");
 
+.remove //removes element
+.html('') //removes content of the element
 ```
+
+* Scale
+```
+d3.scale.linear()
+    .domain([0,10])
+    .range([100,0])
+
+```
+
+
 * `python -m SimpleHTTPServer 8000`
 * d = data , i = index
 ```
@@ -32,6 +49,4 @@ d3.json("file.json",function(data){
         .attr("height", 20)
 })
 ```
-* 
-
-
+*
